--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,11 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
-
-
-body {
   background:grey;
 }
+
+
+.main {
+  background:grey;
+}
+
